--- a/src/elements/route-refresh/route-refresh.html
+++ b/src/elements/route-refresh/route-refresh.html
@@ -1,33 +1,31 @@
 <link rel="import" href="../../components/polymer/polymer.html">
-<link rel="import" href="../route-socket/route-socket.html">
 
 <polymer-element name="route-refresh" attributes="">
   <template>
-    <route-socket id="socket"></route-socket>
   </template>
   <script>
-  Polymer("route-refresh", {
-    ready: function() {
-      this.socket = this.$.socket.socket;
+  // Polymer("route-refresh", {
+  //   ready: function() {
+  //     this.socket = this.$.socket.socket;
 
-      if(this.socket.status) {
-        // Already connected
-        this.socket.on("disconnect", function() {
-          this.socket.on("connect", function() {
-            window.location.reload();
-          });
-        }.bind(this));
-      } else {
-        // Not yet connected
-        this.socket.on("connect", function() {
-          this.socket.on("disconnect", function() {
-            this.socket.on("connect", function() {
-              window.location.reload();
-            });
-          }.bind(this));
-        }.bind(this));
-      }
-    },
-  });
+  //     if(this.socket.status) {
+  //       // Already connected
+  //       this.socket.on("disconnect", function() {
+  //         this.socket.on("connect", function() {
+  //           window.location.reload();
+  //         });
+  //       }.bind(this));
+  //     } else {
+  //       // Not yet connected
+  //       this.socket.on("connect", function() {
+  //         this.socket.on("disconnect", function() {
+  //           this.socket.on("connect", function() {
+  //             window.location.reload();
+  //           });
+  //         }.bind(this));
+  //       }.bind(this));
+  //     }
+  //   },
+  // });
   </script>
 </polymer-element>
