--- a/src/elements/route-tile-lights/route-tile-lights.html
+++ b/src/elements/route-tile-lights/route-tile-lights.html
@@ -18,22 +18,22 @@
 <link rel="import" href="../route-tile/route-tile.html">
 <link rel="import" href="../route-tile-content/route-tile-content.html">
 
-<polymer-element name="route-tile-lights" attributes="name key">
+<polymer-element name="route-tile-lights" attributes="name key model">
   <template>
     <!-- Import CSS -->
     <link rel="stylesheet" href="route-tile-lights.css">
 
     <!-- Observe hueLights property -->
-    <route-state-observer name="hueLights" on-state-change="{{lightsUpdated}}">
+    <route-state-observer name="hueLights" on-state-change="{{lightsUpdated}}" model="{{model}}">
     </route-state-observer>
 
     <!-- Define commands -->
-    <route-command id="toggleCommand" name="LightsToggle" room></route-command>
-    <route-command id="dimCommand" name="LightsDim" room></route-command>
-    <route-command id="brightCommand" name="LightsBright" room></route-command>
+    <route-command id="toggleCommand" name="LightsToggle" model="{{model}}" room></route-command>
+    <route-command id="dimCommand" name="LightsDim" model="{{model}}" room></route-command>
+    <route-command id="brightCommand" name="LightsBright" model="{{model}}" room></route-command>
 
     <!-- Create tile -->
-    <route-tile id="tile" on-tap="{{$.toggleCommand.run}}" on-flickup="{{$.brightCommand}}"
+    <route-tile id="tile" on-tap="{{$.toggleCommand.run}}" on-flickup="{{$.brightCommand.run}}"
         on-flickdown="{{$.dimCommand.run}}" animating="{{animating}}">
       <route-tile-content animating?="{{animating}}">
         <div center>{{name}}<br/>{{mode}}</div>
