--- a/src/elements/route-ui-bar/route-ui-bar.html
+++ b/src/elements/route-ui-bar/route-ui-bar.html
@@ -1,14 +1,14 @@
 <link rel="import" href="../../components/polymer/polymer.html">
 <link rel="import" href="../../components/polymer-flex-layout/polymer-flex-layout.html">
 <link rel="import" href="../route-skycon/route-skycon.html">
-<link rel="import" href="../route-state/route-state.html">
+<link rel="import" href="../route-state-observer/route-state-observer.html">
 
-<polymer-element name="route-ui-bar" attributes="horizontal">
+<polymer-element name="route-ui-bar" attributes="horizontal model">
   <template>
     <link rel="stylesheet" href="route-ui-bar.css">
-    <route-state-value name="Forecast.currently.apparentTemperature" value="{{temperature}}"></route-state-value>
-    <route-state-value name="Forecast.currently.icon" value="{{forecastIcon}}"></route-state-value>
-    <route-state-value name="artworkColors" value="{{colors}}"></route-state-value>
+    <route-state-observer name="Forecast.currently.apparentTemperature" value="{{temperature}}" model="{{model}}"></route-state-observer>
+    <route-state-observer name="Forecast.currently.icon" value="{{forecastIcon}}" model="{{model}}"></route-state-observer>
+    <route-state-observer name="artworkColors" value="{{colors}}" model="{{model}}"></route-state-observer>
 
     <div id="content">
       <polymer-flex-layout></polymer-flex-layout>
@@ -27,7 +27,7 @@
       minutes: "00",
       temperatureString: "00",
       colors: null,
-      horizontal: false,
+      vertical: false,
       enteredView: function() {
         this.setTime();
         this.invalidate();
@@ -47,7 +47,7 @@
         this.layoutJob = this.job(this.layoutJob, this.relayout);
       },
       relayout: function() {
-        if(this.horizontal) {
+        if(this.vertical) {
           this.$.content.style.left = "0px";
           this.$.content.style.width = this.offsetWidth + "px";
           this.$.content.style.height = this.offsetHeight + "px";
