--- a/src/elements/route-tile-media/demo.html
+++ b/src/elements/route-tile-media/demo.html
@@ -49,6 +49,10 @@
             artwork: "../route-ui-image/Muse - Black Holes & Revelations.jpg",
             name: "A really long song name that seems to go on and on...",
           },
+          {
+            artwork: "../route-ui-image/Muse - The Resistance.jpg",
+            name: "Another song",
+          },
         ],
         ready: function() {
           this.counter = 0;
